--- a/log-time/index.html
+++ b/log-time/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
     </style>
-    <title>Sort</title>
+    <title>Search</title>
   </head>
   <body
     style="
@@ -24,7 +24,7 @@
       <div
         style="
           margin: auto;
-          height: 50vh;
+          height: 90vh;
           width: 90vw;
           display: flex;
           flex-direction: column;
@@ -34,10 +34,10 @@
           overflow-x: auto;
         "
       >
-        <h1 style="color: whitesmoke">Bubble Sort</h1>
+        <h1 style="color: whitesmoke">Binary Search</h1>
         <button
           type="button"
-          onclick="bubbleSort()"
+          onclick="binarySearch()"
           style="
             background: whitesmoke;
             padding: 5px 10px;
@@ -47,7 +47,7 @@
             box-shadow: 3px 3px #000;
           "
         >
-          Sort
+          Search
         </button>
         <div
           style="
@@ -57,49 +57,64 @@
             color: whitesmoke;
           "
         >
+          <div>Looking for: <span id="needle"></span></div>
           <div>Iterations: <span id="iter-counter">0</span></div>
-          <div>Swaps: <span id="swap-counter">0</span></div>
+          <div>Result: <span id="result"></span></div>
         </div>
         <div
           id="array-container"
-          style="display: flex; flex-direction: row; gap: 6px"
+          style="display: flex; flex-direction: row; gap: 6px; flex-wrap: wrap"
         ></div>
       </div>
     </main>
   </body>
   <script type="text/javascript">
-    const container = document.getElementById("array-container");
+    let container = document.getElementById("array-container");
+    let counter = document.getElementById("iter-counter");
+    let resultValue = document.getElementById("result");
+    let needleValue = document.getElementById("needle");
+
     const NUM_ELEMENTS = 20;
+    const NEEDLE = Math.floor(Math.random() * NUM_ELEMENTS) + 1;
+    needleValue.innerText = NEEDLE;
     for (let i = 0; i < NUM_ELEMENTS; i++) {
       let item = document.createElement("div");
       item.className = "item";
-      item.innerText = Math.floor(Math.random() * NUM_ELEMENTS) + 1;
+      item.innerText = i;
       item.style =
         "width: 20px; height: auto; border: 2px solid #000; padding: 5px; text-align: center; border-radius: 3px; background: whitesmoke; box-shadow: 3px 3px #000;";
       container.appendChild(item);
     }
-    function bubbleSort() {
-      let arr = document.querySelectorAll(".item");
-      let counter = document.getElementById("iter-counter");
-      let swaps = document.getElementById("swap-counter");
 
-      function findSwaps(i) {
-        for (let j = 0; j < arr.length - 1 - i; j++) {
-          if (parseInt(arr[j].innerText) > parseInt(arr[j + 1].innerText)) {
-            let tmp = parseInt(arr[j].innerText);
-            let tmp2 = parseInt(arr[j + 1].innerText);
-            arr[j].innerText = tmp2;
-            arr[j + 1].innerText = tmp;
-            swaps.innerText = (parseInt(swaps.innerText) + 1).toString();
-          }
-          counter.innerText = (parseInt(counter.innerText) + 1).toString();
+    let haystack = document.querySelectorAll(".item");
+
+    function binarySearch() {
+      let start = 0;
+      let end = haystack.length;
+
+      do {
+        let midPoint = Math.floor(start + (end - start) / 2);
+        let midValue = parseInt(haystack[midPoint].innerText);
+        console.log({ midPoint, midValue, start, end });
+        haystack[midPoint].style.border = "2px solid red";
+        haystack[midPoint].style.transform = "translateY(20px)";
+        if (midValue === NEEDLE) {
+          haystack[midPoint].style.border = "2px solid #000";
+          haystack[midPoint].style.backgroundColor = "rgba(0,255,120)";
+          haystack[midPoint].style.color = "whitesmoke";
+          haystack[midPoint].style.transform = "translateY(20px)";
+          result.innerText = "Needle Found!";
+          return true;
+        } else if (midValue > NEEDLE) {
+          end = midPoint;
+        } else {
+          start = midPoint + 1;
         }
-      }
-      for (let i = 0; i < arr.length; i++) {
-        setTimeout(() => {
-          findSwaps(i);
-        }, 1000 * i);
-      }
+        counter.innerText = parseInt(counter.innerText) + 1;
+      } while (start < end);
+
+      result.innerText = "Needle not found!";
+      return false;
     }
   </script>
 </html>
